--- a/views/users/orders.hbs
+++ b/views/users/orders.hbs
@@ -49,6 +49,8 @@
                             <div class="order-header bg-secondary text-white">
                                 <div class="order-id">ORDER ID: {{orderID}}</div>
                                 <div class="order-status">Order Status: {{status}}</div>
+                                <div class="order-status">Coupon Code: {{code}}</div>
+
                             </div>
 
                             {{#each items}}
