--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -1,22 +1,22 @@
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="/users/css/bootstrap.css" />
 <!-- font awesome style -->
-<link href="css/font-awesome.min.css" rel="stylesheet" />
+<link href="/users/css/font-awesome.min.css" rel="stylesheet" />
 <!-- Custom styles for this template -->
-<link href="css/style.css" rel="stylesheet" />
+<link href="/users/css/style.css" rel="stylesheet" />
 <!-- responsive style -->
-<link href="css/responsive.css" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<link href="/users/css/responsive.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="/users/css/bootstrap.css" />
 <!-- font awesome style -->
-<link href="css/font-awesome.min.css" rel="stylesheet" />
+<link href="/users/css/font-awesome.min.css" rel="stylesheet" />
 <!-- Custom styles for this template -->
-<link href="css/style.css" rel="stylesheet" />
+<link href="/users/css/style.css" rel="stylesheet" />
 <!-- responsive style -->
-<link href="css/responsive.css" rel="stylesheet" />
+<link href="/users/css/responsive.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.19.0/font/bootstrap-icons.css" rel="stylesheet"><header class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html"><img width="250" src="/images/logo.png" alt="#" /></a>
+            <a class="navbar-brand" href="/"><img width="250" src="/images/logo.png" alt="#" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class=""> </span>
@@ -26,24 +26,11 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/ ">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    {{!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button"
-                            aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pages <span
-                                    class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="testimonial.html">Testimonial</a></li>
-                        </ul>
-                    </li> --}}
+                   
                     <li class="nav-item">
                         <a class="nav-link" href="/users/allproducts1">Products</a>
                     </li>
-                    {{!-- <li class="nav-item">
-                        <a class="nav-link" href="blog_list.html">Blog</a>
-                    </li> --}}
-                    {{!-- <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li> --}}
+                   
                     <li class="nav-item">
                         <a class="nav-link" href="/users/cart">
                             <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
