--- a/views/users/checkout.hbs
+++ b/views/users/checkout.hbs
@@ -414,11 +414,10 @@
                     <div class="p-3 bg-light mb-3">
                         <h5 class="font-size-16 mb-0">Order Summary <span class="float-end ms-2">{{count}} Items</span>
                         </h5>
-                        <div class="col text-right">Rs: {{#if data.discountprice}}<b>{{data.discountprice}}</b>
-                            {{else}}{{data.totalPrice}}{{/if}}</div>
+                        <div class="col text-right">Rs:{{newtotal}} </div>
                         {{!-- <div class="col">TOTAL PRICE</div> --}}
                         {{#if data.discountprice}}
-                        <div id="totlink" class="row text-right">Total Rs: {{data.totalPrice}}</div><br>
+                        <div id="totlink" class="row text-right">Total Rs: {{total}}</div><br>
                         <div id="totlink" class="row text-right">Discount %: {{data.discount}}</div>
                         {{!-- <div id="totlink" class="col text-right">Discount Rs: {{total}}</div> --}}
                         {{else}}
