--- a/views/admin/editproduct.hbs
+++ b/views/admin/editproduct.hbs
@@ -33,6 +33,11 @@ height: 60px;
         placeholder="Enter category">
     </div>
     <div class="form-group">
+      <label for="exampleInputEmail1" required>Description</label>
+      <input type="text" name="description" class="form-control"  value="{{data.decription}}"
+        placeholder="Enter description">
+    </div>
+    <div class="form-group">
       <label for="exampleInputEmail1" required>Price</label>
       <input type="number" name="price" class="form-control"  value="{{data.price}}"
         placeholder="Price">
