--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -45,7 +45,7 @@
                         <th>Min Price</th>
                         <th>Max Price</th>
                         <th>isActive</th>
-                        <th>Actions</th>
+                        {{!-- <th>Actions</th> --}}
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
@@ -70,7 +70,7 @@
                         <td>{{this.minPriceRange}}</span></td>
                         <td>{{this.maxPriceRange}}</span></td>
                         <td>{{this.isActive}}</span></td>
-                        <td>
+                        {{!-- <td>
                             <div class="dropdown">
                                 <button class="btn btn-outline-secondary dropdown-toggle" type="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                            
-                        </td>
+                        </td> --}}
                     </tr>
                     {{/each}}
 
