--- a/views/users/checkout.hbs
+++ b/views/users/checkout.hbs
@@ -414,7 +414,7 @@
                     <div class="p-3 bg-light mb-3">
                         <h5 class="font-size-16 mb-0">Order Summary <span class="float-end ms-2">{{count}} Items</span>
                         </h5>
-                        <div class="col text-right">Rs:{{newtotal}} </div>
+                        <div class="col text-right"><h4>Rs:{{newtotal}}</h4> </div>
                         {{!-- <div class="col">TOTAL PRICE</div> --}}
                         {{#if data.discountprice}}
                         <div id="totlink" class="row text-right">Total Rs: {{total}}</div><br>
@@ -422,6 +422,8 @@
                         {{!-- <div id="totlink" class="col text-right">Discount Rs: {{total}}</div> --}}
                         {{else}}
                         <div id="totlink" class="col text-right">Rs: {{total}}</div>
+
+
                         {{/if}}
                     </div>
                 </div>
